(fix): TermsPage.module.css -> overflow: auto;

--- a/src/pages/TermsPage/TermsPage.module.css
+++ b/src/pages/TermsPage/TermsPage.module.css
@@ -2,4 +2,5 @@
   padding: 28px 16px;
   display: flex;
   justify-content: center;
+  overflow: auto;
 }
